saint-lascivious.github.io: cards for all, relative back/home
Changes to be committed:
 - modified:   265.html
 - modified:   404.html
 - modified:   index.html

--- a/265.html
+++ b/265.html
@@ -70,15 +70,22 @@
       </header>
       <div class="demo-ribbon"></div>
       <main class="demo-main mdl-layout__content">
+        <!-- card one -->
         <div class="demo-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="demo-content mdl-color--white mdl-shadow--4dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <div class="demo-crumbs mdl-color-text--grey-500">
-              <a href="https://sainternet.xyz">Home</a> &gt; <a href="#pokemon265">Pokémon #265</a> &gt; <a href="#wurmple">Wurmple</a>
+              <a href="index.html">Home</a> &gt; <a href="#pokemon265">Pokémon #265</a> &gt; <a href="#wurmple">Wurmple</a>
             </div>
+          </div>
+        </div>
+        <!-- card two -->
+        <div class="demo-container mdl-grid">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="demo-content mdl-color--white mdl-shadow--8dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <h3 id="pokemon265">Pokémon #265<br>Wurmple</h3>
               <picture>
-                <a href="404.html">
+                <a href="404.html#pokemon404">
                   <img src="resources/images/wurmple-shiny.png" alt="Pokémon #265, Wurmple: Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping." style="width:80%;">
                 </a>
               </picture>
@@ -100,7 +107,7 @@
         </footer>
       </main>
     </div>
-    <a href="https://sainternet.xyz" target="_blank" "rel=noopener noreferrer" id="button_home" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">Back</a>
+    <a href="index.html" target="_blank" "rel=noopener noreferrer" id="button_home" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">Back</a>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   </body>
 </html>
