--- a/404.html
+++ b/404.html
@@ -70,12 +70,19 @@
       </header>
       <div class="demo-ribbon"></div>
       <main class="demo-main mdl-layout__content">
+        <!-- card one -->
         <div class="demo-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="demo-content mdl-color--white mdl-shadow--4dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <div class="demo-crumbs mdl-color-text--grey-500">
-              <a href="https://sainternet.xyz">Home</a> &gt; <a href="#pokemon404">Pokémon #404</a> &gt; <a href="#luxio">Luxio</a>
+              <a href="index.html">Home</a> &gt; <a href="#pokemon404">Pokémon #404</a> &gt; <a href="#luxio">Luxio</a>
             </div>
+          </div>
+        </div>
+        <!-- card two -->
+        <div class="demo-container mdl-grid">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="demo-content mdl-color--white mdl-shadow--8dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <h3 id="pokemon404">Pokémon #404<br>Luxio<br>Spark Pokémon</h3>
               <picture>
                 <img src="resources/images/luxio.png" alt="Pokémon #404, Luxio (Spark Pokémon): Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes." style="width:80%;">
@@ -98,7 +105,7 @@
         </footer>
       </main>
     </div>
-    <a href="https://sainternet.xyz" target="_blank" "rel=noopener noreferrer" id="button_home" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">Back</a>
+    <a href="index.html" target="_blank" "rel=noopener noreferrer" id="button_home" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">Back</a>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   </body>
 </html>
