--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <h3 id="pokedexoverdns">National Pokédex over DNS</h3>
               <!-- get wurmed -->
               <picture>
-                <a href="265.html">
+                <a href="265.html#pokemon265">
                   <img src="resources/images/wurmple.png" alt="Pokémon #265, Wurmple: Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping." style="width:80%;">
                 </a>
               </picture>
