saint-lascivious.github.io: don't link to 404 from 265
Changes to be committed:
 - modified:   265.html
   redirect to index.html#pokedexoverdns instead

--- a/265.html
+++ b/265.html
@@ -85,7 +85,7 @@
           <div class="demo-content mdl-color--white mdl-shadow--8dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <h3 id="pokemon265">Pokémon #265<br>Wurmple</h3>
               <picture>
-                <a href="404.html#pokemon404">
+                <a href="index.html#pokedexoverdns">
                   <img src="resources/images/wurmple-shiny.png" alt="Pokémon #265, Wurmple: Using the spikes on its rear end, Wurmple peels the bark off trees and feeds on the sap that oozes out. This Pokémon's feet are tipped with suction pads that allow it to cling to glass without slipping." style="width:80%;">
                 </a>
               </picture>
