--- a/265.html
+++ b/265.html
@@ -73,7 +73,7 @@
         <!-- card one -->
         <div class="demo-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="demo-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+          <div class="demo-navigation mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <div class="demo-crumbs mdl-color-text--grey-500">
               <a href="index.html">Home</a> &gt; <a href="#pokemon265">Pokémon #265</a> &gt; <a href="#wurmple">Wurmple</a>
             </div>
@@ -82,7 +82,7 @@
         <!-- card two -->
         <div class="demo-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="demo-content mdl-color--white mdl-shadow--8dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+          <div class="demo-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <h3 id="pokemon265">Pokémon #265<br>Wurmple</h3>
               <picture>
                 <a href="index.html#pokedexoverdns">
