--- a/404.html
+++ b/404.html
@@ -73,7 +73,7 @@
         <!-- card one -->
         <div class="demo-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="demo-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+          <div class="demo-navigation mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <div class="demo-crumbs mdl-color-text--grey-500">
               <a href="index.html">Home</a> &gt; <a href="#pokemon404">Pokémon #404</a> &gt; <a href="#luxio">Luxio</a>
             </div>
