--- a/404.html
+++ b/404.html
@@ -85,7 +85,7 @@
           <div class="demo-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <h3 id="pokemon404">Pokémon #404<br>Luxio<br>Spark Pokémon</h3>
               <picture>
-                <img src="resources/images/luxio.png" alt="Pokémon #404, Luxio (Spark Pokémon): Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes." style="width:80%;">
+                <img src="resources/images/luxio.png" alt="Pokémon #404, Luxio (Spark Pokémon): Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.">
               </picture>
               <p id="luxio">
                 A wild <b>Luxio</b> appeared!
