--- a/404.html
+++ b/404.html
@@ -47,6 +47,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-red.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="resources/stylesheets/sainternet.css">
     <style>
     #button_home {
@@ -83,7 +84,7 @@
         <div class="demo-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
           <div class="demo-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <h3 id="pokemon404">Pokémon #404<br>Luxio<br>Spark Pokémon</h3>
+            <h3 id="pokemon404">Pokémon #404<br>Luxio<br>(Spark Pokémon)</h3>
               <picture>
                 <img src="resources/images/luxio.png" alt="Pokémon #404, Luxio (Spark Pokémon): Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.">
               </picture>
@@ -98,8 +99,8 @@
         <footer class="demo-footer mdl-mini-footer">
           <div class="mdl-mini-footer--left-section">
             <ul class="mdl-mini-footer--link-list">
-              <li><a href="https://github.com/saint-lascivious">GitHub</a></li>
-              <li><a href="https://www.reddit.com/user/saint-lascivious">Reddit</a></li>
+              <li><a href="https://github.com/saint-lascivious"><i class="fa fa-github"></i></a></li>
+              <li><a href="https://www.reddit.com/user/saint-lascivious"><i class="fa fa-reddit"></i></a></li>
             </ul>
           </div>
         </footer>
