--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-red.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="resources/stylesheets/sainternet.css">
     <style>
     #button_contact {
@@ -168,8 +169,8 @@
         <footer class="demo-footer mdl-mini-footer">
           <div class="mdl-mini-footer--left-section">
             <ul class="mdl-mini-footer--link-list">
-              <li><a href="https://github.com/saint-lascivious">GitHub</a></li>
-              <li><a href="https://www.reddit.com/user/saint-lascivious">Reddit</a></li>
+              <li><a href="https://github.com/saint-lascivious"><i class="fa fa-github"></i></a></li>
+              <li><a href="https://www.reddit.com/user/saint-lascivious"><i class="fa fa-reddit"></i></a></li>
             </ul>
           </div>
         </footer>
