--- a/265.html
+++ b/265.html
@@ -47,7 +47,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-red.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="resources/stylesheets/sainternet.css">
     <style>
     #button_home {
@@ -101,14 +101,15 @@
         <footer class="demo-footer mdl-mini-footer">
           <div class="mdl-mini-footer--left-section">
             <ul class="mdl-mini-footer--link-list">
-              <li><a href="https://github.com/saint-lascivious"><i class="fa fa-github"></i></a></li>
-              <li><a href="https://www.reddit.com/user/saint-lascivious"><i class="fa fa-reddit"></i></a></li>
+              <li><a href="https://discord.gg/NC7taVyn"><i class="fa-brands fa-discord" style="font-size:36px;text-shadow:2px 2px 4px #000000;"></i></a></li>
+              <li><a href="https://github.com/saint-lascivious"><i class="fa-brands fa-github" style="font-size:36px;text-shadow:2px 2px 4px #000000;"></i></a></li>
+              <li><a href="https://www.reddit.com/user/saint-lascivious"><i class="fa-brands fa-reddit" style="font-size:36px;text-shadow:2px 2px 4px #000000;"></i></a></li>
             </ul>
           </div>
         </footer>
       </main>
     </div>
-    <a href="index.html" target="_blank" "rel=noopener noreferrer" id="button_home" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">Back</a>
+    <a href="index.html" target="_blank" "rel=noopener noreferrer" id="button_home" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast mdl-shadow--16dp">Back</a>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   </body>
 </html>
