saint-lascivious.github.io: i-> icon, icon shadows in stylesheet
larger blur radius for icon text shadows

Changes to be committed:
 - modified:   265.html
 - modified:   404.html
 - modified:   index.html
 - modified:   resources/stylesheets/sainternet.css

--- a/265.html
+++ b/265.html
@@ -101,9 +101,9 @@
         <footer class="demo-footer mdl-mini-footer">
           <div class="mdl-mini-footer--left-section">
             <ul class="mdl-mini-footer--link-list">
-              <li><a href="https://discord.gg/NC7taVyn"><i class="fa-brands fa-discord" style="font-size:36px;text-shadow:2px 2px 4px #000000;"></i></a></li>
-              <li><a href="https://github.com/saint-lascivious"><i class="fa-brands fa-github" style="font-size:36px;text-shadow:2px 2px 4px #000000;"></i></a></li>
-              <li><a href="https://www.reddit.com/user/saint-lascivious"><i class="fa-brands fa-reddit" style="font-size:36px;text-shadow:2px 2px 4px #000000;"></i></a></li>
+              <li><a href="https://discord.gg/NC7taVyn"><icon class="fa-brands fa-discord"></icon></a></li>
+              <li><a href="https://github.com/saint-lascivious"><icon class="fa-brands fa-github"></icon></a></li>
+              <li><a href="https://www.reddit.com/user/saint-lascivious"><icon class="fa-brands fa-reddit"></icon></a></li>
             </ul>
           </div>
         </footer>
