saint-lascivious.github.io: minor changes to pretty much everything
Changes to be committed:
 - modified:   265.html
 - modified:   404.html
 - modified:   index.html
 - new file:   resources/images/luxio-shiny.png
 - modified:   resources/stylesheets/sainternet.css

--- a/404.html
+++ b/404.html
@@ -62,30 +62,31 @@
     </style>
   </head>
   <body>
-    <div class="demo-layout mdl-layout mdl-layout--fixed-header mdl-js-layout mdl-color--grey-100">
-      <header class="demo-header mdl-layout__header mdl-layout__header--scroll mdl-color--grey-100 mdl-color-text--grey-800">
+    <div class="sainternet-layout mdl-layout mdl-layout--fixed-header mdl-js-layout mdl-color--grey-100">
+      <header class="sainternet-header mdl-layout__header mdl-layout__header--scroll mdl-color--grey-100 mdl-color-text--grey-800">
         <div class="mdl-layout__header-row">
           <span class="mdl-layout-title"><b>sainternet.xyz</b></span>
           <div class="mdl-layout-spacer"></div>
         </div>
       </header>
-      <div class="demo-ribbon"></div>
-      <main class="demo-main mdl-layout__content">
+      <div class="sainternet-ribbon"></div>
+      <main class="sainternet-main mdl-layout__content">
         <!-- card one -->
-        <div class="demo-container mdl-grid">
+        <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="demo-navigation mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <div class="demo-crumbs mdl-color-text--grey-500">
+          <div class="sainternet-navigation mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+            <div class="sainternet-crumbs mdl-color-text--grey-500">
               <a href="index.html">Home</a> &gt; <a href="#pokemon404">Pokémon #404</a> &gt; <a href="#luxio">Luxio</a>
             </div>
           </div>
         </div>
         <!-- card two -->
-        <div class="demo-container mdl-grid">
+        <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="demo-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+          <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <h3 id="pokemon404">Pokémon #404<br>Luxio<br>(Spark Pokémon)</h3>
               <picture>
+                <source srcset="resources/images/luxio-shiny.png" media="(prefers-color-scheme: dark)">
                 <img src="resources/images/luxio.png" alt="Pokémon #404, Luxio (Spark Pokémon): Strong electricity courses through the tips of its sharp claws. A light scratch causes fainting in foes.">
               </picture>
               <p id="luxio">
@@ -96,7 +97,7 @@
               </p>
            </div>
         </div>
-        <footer class="demo-footer mdl-mini-footer">
+        <footer class="sainternet-footer mdl-mini-footer">
           <div class="mdl-mini-footer--left-section">
             <ul class="mdl-mini-footer--link-list">
               <li><a href="https://discord.gg/NC7taVyn"><icon class="fa-brands fa-discord"></icon></a></li>
