--- a/index.html
+++ b/index.html
@@ -66,28 +66,28 @@
     </style>
   </head>
   <body>
-    <div class="demo-layout mdl-layout mdl-layout--fixed-header mdl-js-layout mdl-color--grey-100">
-      <header class="demo-header mdl-layout__header mdl-layout__header--scroll mdl-color--grey-100 mdl-color-text--grey-800">
+    <div class="sainternet-layout mdl-layout mdl-layout--fixed-header mdl-js-layout mdl-color--grey-100">
+      <header class="sainternet-header mdl-layout__header mdl-layout__header--scroll mdl-color--grey-100 mdl-color-text--grey-800">
         <div class="mdl-layout__header-row">
           <span class="mdl-layout-title"><b>sainternet.xyz</b></span>
           <div class="mdl-layout-spacer"></div>
         </div>
       </header>
-      <div class="demo-ribbon"></div>
-      <main class="demo-main mdl-layout__content">
+      <div class="sainternet-ribbon"></div>
+      <main class="sainternet-main mdl-layout__content">
         <!-- card one -->
-        <div class="demo-container mdl-grid">
+        <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="demo-navigation mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
-            <div class="demo-crumbs mdl-color-text--grey-500">
+          <div class="sainternet-navigation mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+            <div class="sainternet-crumbs mdl-color-text--grey-500">
               <a href="#filtereddns">Filtered DNS</a> &gt; <a href="#pokedexoverdns">National Pokédex over DNS</a>
             </div>
           </div>
         </div>
         <!-- card two -->
-        <div class="demo-container mdl-grid">
+        <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="demo-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+          <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <h3 id="filtereddns">Filtered DNS</h3>
               <p>
                 Sainternet offers validating, recursive, caching, <i>mostly</i> specification compliant, filtered <a href="https://en.wikipedia.org/wiki/Domain_Name_System">DNS</a> servers with a zero logging policy, served over all your favourite acronyms.
@@ -141,9 +141,9 @@
           </div>
         </div>
         <!-- card three -->
-        <div class="demo-container mdl-grid">
+        <div class="sainternet-container mdl-grid">
           <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
-          <div class="demo-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
+          <div class="sainternet-content mdl-color--white mdl-shadow--16dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <h3 id="pokedexoverdns">National Pokédex over DNS</h3>
               <!-- get wurmed -->
               <picture>
@@ -166,7 +166,7 @@
               </p>
           </div>
         </div>
-        <footer class="demo-footer mdl-mini-footer">
+        <footer class="sainternet-footer mdl-mini-footer">
           <div class="mdl-mini-footer--left-section">
             <ul class="mdl-mini-footer--link-list">
               <li><a href="https://discord.gg/NC7taVyn"><icon class="fa-brands fa-discord"></icon></a></li>
